apps/dns-test-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-test-1
  namespace: dev
  labels:
    app: dns-test-1
    backstage.io/kubernetes-id: dns-test-1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns-test-1
  template:
    metadata:
      labels:
        app: dns-test-1
        backstage.io/kubernetes-id: dns-test-1
        environment: dev
    spec:
      containers:
        - name: dns-test-1
          image: jaykumark7/dns-test-1:1.0.13
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
