apps/dns-test-1/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-test-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dns-test-1
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dns-test-1-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dns-test-1
                port:
                  number: 80
